# python_foo

./: README.md  pyproject.toml
python_foo/: __init__.py  bar.py  baz.py
tests/: baz_test.py
