[tool.poetry]
name = "python-foo"
version = "0.1.0"
description = ""
authors = ["alextanhongpin"]
readme = "README.md"
packages = [
    { include = "python_foo" }
]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
